deployments/k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etnr-demo-client
  namespace: etnr-client-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etnr-demo-client
  template:
    metadata:
      labels:
        app: etnr-demo-client
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: etnr-demo-client
          image: ghcr.io/sshocked/etnr-demo-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
